--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>panda commerce </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- !-- custom css --> -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,38 +16,38 @@
     <header class="container">
         <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""">
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="">
                 </a>
                 <button class=" navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#shoes">Shoes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#backpack">Backpack</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#subscribe">Subscribe</a>
-                            </li>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#backpack">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
+                        </li>
 
-                        </ul>
+                    </ul>
 
-                    </div>
+                </div>
             </div>
         </nav>
         <!-- slider start -->
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active border rounded bg-info ps-5">
+                    <div class="carousel-item active border rounded panda-panda-bg-info ps-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -55,7 +57,7 @@
                                         do amet sint. Velit officia consequat duis enim velit mollit.
                                         Exercitation veniam consequat sunt nostrud amet.</p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-warning">Buy now</div>
+                                    <div class="btn panda-btn-warning">Buy now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -63,8 +65,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info ps-5">
-                        <div class="row">
+                    <div class="carousel-item active border rounded panda-bg-info ps-5">
+                        - <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
                                     <h2>X-Box for your living room</h2>
@@ -72,7 +74,7 @@
                                         This is the best x-box in the world for people who just want to waste time in
                                         front</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-warning">Buy now</div>
+                                    <div class="btn panda-btn-warning">Buy now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -80,7 +82,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info ps-5">
+                    <div class="carousel-item active border rounded panda-bg-info ps-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ">
                                 <div>
@@ -88,7 +90,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world</p>
                                     <h1>$400</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-warning">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -157,7 +159,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -170,7 +172,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -184,7 +186,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -205,7 +207,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -219,7 +221,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -234,7 +236,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -243,7 +245,7 @@
         <!-- backpack section end -->
         <!-- suscrive start -->
         <section style="height: 300px"
-            class="container rounded-3 d-flex align-items-center justify-content-center bg-info" id="subscribe">
+            class="container rounded-3 d-flex align-items-center justify-content-center panda-bg-info" id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -255,7 +257,7 @@
                     </div>
 
 
-                    <button type="submit" class="btn btn-warning">Submit</button>
+                    <button type="submit" class="btn panda-btn-warning">Submit</button>
             </div>
             </form>
         </section>
